// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`New syntax babel transforms example test case: browser-current-esm 1`] = `
Array [
  "esm/index-browser-current-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: current, Format: esm
const foo = {};
const optionalChain = foo?.bar;
const nullCoalesc = foo ?? 0;
foo.bar ??= 'bar';
foo.baz ||= 'baz';
export { foo, nullCoalesc, optionalChain };
",
]
`;

exports[`New syntax babel transforms example test case: browser-current-lib 1`] = `
Array [
  "lib/index-browser-current-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: current, Format: lib
'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});
const foo = {};
const optionalChain = foo?.bar;
const nullCoalesc = foo ?? 0;
foo.bar ??= 'bar';
foo.baz ||= 'baz';
exports.foo = foo;
exports.nullCoalesc = nullCoalesc;
exports.optionalChain = optionalChain;
",
]
`;

exports[`New syntax babel transforms example test case: browser-current-umd 1`] = `
Array [
  "umd/index-browser-current-umd.js",
  "(function (global, factory) {
  if (typeof define === \\"function\\" && define.amd) {
    define([\\"exports\\"], factory);
  } else if (typeof exports !== \\"undefined\\") {
    factory(exports);
  } else {
    var mod = {
      exports: {}
    };
    factory(mod.exports);
    global.examples = mod.exports;
  }
})(typeof globalThis !== \\"undefined\\" ? globalThis : typeof self !== \\"undefined\\" ? self : this, function (_exports) {
  \\"use strict\\";

  Object.defineProperty(_exports, \\"__esModule\\", {
    value: true
  });
  _exports.optionalChain = _exports.nullCoalesc = _exports.foo = void 0;
  // Bundled with Packemon: https://packemon.dev
  // Platform: browser, Support: current, Format: umd
  const foo = {};
  _exports.foo = foo;
  const optionalChain = foo?.bar;
  _exports.optionalChain = optionalChain;
  const nullCoalesc = foo ?? 0;
  _exports.nullCoalesc = nullCoalesc;
  foo.bar ??= 'bar';
  foo.baz ||= 'baz';
});
",
]
`;

exports[`New syntax babel transforms example test case: browser-experimental-esm 1`] = `
Array [
  "esm/index-browser-experimental-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: experimental, Format: esm
const foo = {};
const optionalChain = foo?.bar;
const nullCoalesc = foo ?? 0;
foo.bar ??= 'bar';
foo.baz ||= 'baz';
export { foo, nullCoalesc, optionalChain };
",
]
`;

exports[`New syntax babel transforms example test case: browser-experimental-lib 1`] = `
Array [
  "lib/index-browser-experimental-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: experimental, Format: lib
'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});
const foo = {};
const optionalChain = foo?.bar;
const nullCoalesc = foo ?? 0;
foo.bar ??= 'bar';
foo.baz ||= 'baz';
exports.foo = foo;
exports.nullCoalesc = nullCoalesc;
exports.optionalChain = optionalChain;
",
]
`;

exports[`New syntax babel transforms example test case: browser-experimental-umd 1`] = `
Array [
  "umd/index-browser-experimental-umd.js",
  "(function (global, factory) {
  if (typeof define === \\"function\\" && define.amd) {
    define([\\"exports\\"], factory);
  } else if (typeof exports !== \\"undefined\\") {
    factory(exports);
  } else {
    var mod = {
      exports: {}
    };
    factory(mod.exports);
    global.examples = mod.exports;
  }
})(typeof globalThis !== \\"undefined\\" ? globalThis : typeof self !== \\"undefined\\" ? self : this, function (_exports) {
  \\"use strict\\";

  Object.defineProperty(_exports, \\"__esModule\\", {
    value: true
  });
  _exports.optionalChain = _exports.nullCoalesc = _exports.foo = void 0;
  // Bundled with Packemon: https://packemon.dev
  // Platform: browser, Support: experimental, Format: umd
  const foo = {};
  _exports.foo = foo;
  const optionalChain = foo?.bar;
  _exports.optionalChain = optionalChain;
  const nullCoalesc = foo ?? 0;
  _exports.nullCoalesc = nullCoalesc;
  foo.bar ??= 'bar';
  foo.baz ||= 'baz';
});
",
]
`;

exports[`New syntax babel transforms example test case: browser-legacy-esm 1`] = `
Array [
  "esm/index-browser-legacy-esm.js",
  "var _foo$bar;

// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: legacy, Format: esm
var foo = {};
var optionalChain = foo === null || foo === void 0 ? void 0 : foo.bar;
var nullCoalesc = foo !== null && foo !== void 0 ? foo : 0;
(_foo$bar = foo.bar) !== null && _foo$bar !== void 0 ? _foo$bar : foo.bar = 'bar';
foo.baz || (foo.baz = 'baz');
export { foo, nullCoalesc, optionalChain };
",
]
`;

exports[`New syntax babel transforms example test case: browser-legacy-lib 1`] = `
Array [
  "lib/index-browser-legacy-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: legacy, Format: lib
'use strict';

var _foo$bar;

Object.defineProperty(exports, '__esModule', {
  value: true
});
var foo = {};
var optionalChain = foo === null || foo === void 0 ? void 0 : foo.bar;
var nullCoalesc = foo !== null && foo !== void 0 ? foo : 0;
(_foo$bar = foo.bar) !== null && _foo$bar !== void 0 ? _foo$bar : foo.bar = 'bar';
foo.baz || (foo.baz = 'baz');
exports.foo = foo;
exports.nullCoalesc = nullCoalesc;
exports.optionalChain = optionalChain;
",
]
`;

exports[`New syntax babel transforms example test case: browser-legacy-umd 1`] = `
Array [
  "umd/index-browser-legacy-umd.js",
  "(function (global, factory) {
  if (typeof define === \\"function\\" && define.amd) {
    define([\\"exports\\"], factory);
  } else if (typeof exports !== \\"undefined\\") {
    factory(exports);
  } else {
    var mod = {
      exports: {}
    };
    factory(mod.exports);
    global.examples = mod.exports;
  }
})(typeof globalThis !== \\"undefined\\" ? globalThis : typeof self !== \\"undefined\\" ? self : this, function (_exports) {
  \\"use strict\\";

  Object.defineProperty(_exports, \\"__esModule\\", {
    value: true
  });
  _exports.optionalChain = _exports.nullCoalesc = _exports.foo = void 0;

  var _foo$bar;

  // Bundled with Packemon: https://packemon.dev
  // Platform: browser, Support: legacy, Format: umd
  var foo = {};
  _exports.foo = foo;
  var optionalChain = foo === null || foo === void 0 ? void 0 : foo.bar;
  _exports.optionalChain = optionalChain;
  var nullCoalesc = foo !== null && foo !== void 0 ? foo : 0;
  _exports.nullCoalesc = nullCoalesc;
  (_foo$bar = foo.bar) !== null && _foo$bar !== void 0 ? _foo$bar : foo.bar = 'bar';
  foo.baz || (foo.baz = 'baz');
});
",
]
`;

exports[`New syntax babel transforms example test case: browser-stable-esm 1`] = `
Array [
  "esm/index-browser-stable-esm.js",
  "var _foo$bar;

// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: stable, Format: esm
const foo = {};
const optionalChain = foo === null || foo === void 0 ? void 0 : foo.bar;
const nullCoalesc = foo !== null && foo !== void 0 ? foo : 0;
(_foo$bar = foo.bar) !== null && _foo$bar !== void 0 ? _foo$bar : foo.bar = 'bar';
foo.baz || (foo.baz = 'baz');
export { foo, nullCoalesc, optionalChain };
",
]
`;

exports[`New syntax babel transforms example test case: browser-stable-lib 1`] = `
Array [
  "lib/index-browser-stable-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: stable, Format: lib
'use strict';

var _foo$bar;

Object.defineProperty(exports, '__esModule', {
  value: true
});
const foo = {};
const optionalChain = foo === null || foo === void 0 ? void 0 : foo.bar;
const nullCoalesc = foo !== null && foo !== void 0 ? foo : 0;
(_foo$bar = foo.bar) !== null && _foo$bar !== void 0 ? _foo$bar : foo.bar = 'bar';
foo.baz || (foo.baz = 'baz');
exports.foo = foo;
exports.nullCoalesc = nullCoalesc;
exports.optionalChain = optionalChain;
",
]
`;

exports[`New syntax babel transforms example test case: browser-stable-umd 1`] = `
Array [
  "umd/index-browser-stable-umd.js",
  "(function (global, factory) {
  if (typeof define === \\"function\\" && define.amd) {
    define([\\"exports\\"], factory);
  } else if (typeof exports !== \\"undefined\\") {
    factory(exports);
  } else {
    var mod = {
      exports: {}
    };
    factory(mod.exports);
    global.examples = mod.exports;
  }
})(typeof globalThis !== \\"undefined\\" ? globalThis : typeof self !== \\"undefined\\" ? self : this, function (_exports) {
  \\"use strict\\";

  Object.defineProperty(_exports, \\"__esModule\\", {
    value: true
  });
  _exports.optionalChain = _exports.nullCoalesc = _exports.foo = void 0;

  var _foo$bar;

  // Bundled with Packemon: https://packemon.dev
  // Platform: browser, Support: stable, Format: umd
  const foo = {};
  _exports.foo = foo;
  const optionalChain = foo === null || foo === void 0 ? void 0 : foo.bar;
  _exports.optionalChain = optionalChain;
  const nullCoalesc = foo !== null && foo !== void 0 ? foo : 0;
  _exports.nullCoalesc = nullCoalesc;
  (_foo$bar = foo.bar) !== null && _foo$bar !== void 0 ? _foo$bar : foo.bar = 'bar';
  foo.baz || (foo.baz = 'baz');
});
",
]
`;

exports[`New syntax babel transforms example test case: native-current-lib 1`] = `
Array [
  "lib/index-native-current-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: current, Format: lib
'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});
const foo = {};
const optionalChain = foo?.bar;
const nullCoalesc = foo ?? 0;
foo.bar ??= 'bar';
foo.baz ||= 'baz';
exports.foo = foo;
exports.nullCoalesc = nullCoalesc;
exports.optionalChain = optionalChain;
",
]
`;

exports[`New syntax babel transforms example test case: native-experimental-lib 1`] = `
Array [
  "lib/index-native-experimental-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: experimental, Format: lib
'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});
const foo = {};
const optionalChain = foo?.bar;
const nullCoalesc = foo ?? 0;
foo.bar ??= 'bar';
foo.baz ||= 'baz';
exports.foo = foo;
exports.nullCoalesc = nullCoalesc;
exports.optionalChain = optionalChain;
",
]
`;

exports[`New syntax babel transforms example test case: native-legacy-lib 1`] = `
Array [
  "lib/index-native-legacy-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: legacy, Format: lib
'use strict';

var _foo$bar;

Object.defineProperty(exports, '__esModule', {
  value: true
});
const foo = {};
const optionalChain = foo === null || foo === void 0 ? void 0 : foo.bar;
const nullCoalesc = foo !== null && foo !== void 0 ? foo : 0;
(_foo$bar = foo.bar) !== null && _foo$bar !== void 0 ? _foo$bar : foo.bar = 'bar';
foo.baz || (foo.baz = 'baz');
exports.foo = foo;
exports.nullCoalesc = nullCoalesc;
exports.optionalChain = optionalChain;
",
]
`;

exports[`New syntax babel transforms example test case: native-stable-lib 1`] = `
Array [
  "lib/index-native-stable-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: stable, Format: lib
'use strict';

var _foo$bar;

Object.defineProperty(exports, '__esModule', {
  value: true
});
const foo = {};
const optionalChain = foo === null || foo === void 0 ? void 0 : foo.bar;
const nullCoalesc = foo !== null && foo !== void 0 ? foo : 0;
(_foo$bar = foo.bar) !== null && _foo$bar !== void 0 ? _foo$bar : foo.bar = 'bar';
foo.baz || (foo.baz = 'baz');
exports.foo = foo;
exports.nullCoalesc = nullCoalesc;
exports.optionalChain = optionalChain;
",
]
`;

exports[`New syntax babel transforms example test case: node-current-cjs 1`] = `
Array [
  "cjs/index-node-current-cjs.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: cjs
'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});
const foo = {};
const optionalChain = foo?.bar;
const nullCoalesc = foo ?? 0;
foo.bar ??= 'bar';
foo.baz ||= 'baz';
exports.foo = foo;
exports.nullCoalesc = nullCoalesc;
exports.optionalChain = optionalChain;
",
]
`;

exports[`New syntax babel transforms example test case: node-current-lib 1`] = `
Array [
  "lib/index-node-current-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: lib
'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});
const foo = {};
const optionalChain = foo?.bar;
const nullCoalesc = foo ?? 0;
foo.bar ??= 'bar';
foo.baz ||= 'baz';
exports.foo = foo;
exports.nullCoalesc = nullCoalesc;
exports.optionalChain = optionalChain;
",
]
`;

exports[`New syntax babel transforms example test case: node-current-mjs 1`] = `
Array [
  "mjs/index-node-current-mjs.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: mjs
const foo = {};
const optionalChain = foo?.bar;
const nullCoalesc = foo ?? 0;
foo.bar ??= 'bar';
foo.baz ||= 'baz';
export { foo, nullCoalesc, optionalChain };
",
]
`;

exports[`New syntax babel transforms example test case: node-experimental-cjs 1`] = `
Array [
  "cjs/index-node-experimental-cjs.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: cjs
'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});
const foo = {};
const optionalChain = foo?.bar;
const nullCoalesc = foo ?? 0;
foo.bar ??= 'bar';
foo.baz ||= 'baz';
exports.foo = foo;
exports.nullCoalesc = nullCoalesc;
exports.optionalChain = optionalChain;
",
]
`;

exports[`New syntax babel transforms example test case: node-experimental-lib 1`] = `
Array [
  "lib/index-node-experimental-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: lib
'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});
const foo = {};
const optionalChain = foo?.bar;
const nullCoalesc = foo ?? 0;
foo.bar ??= 'bar';
foo.baz ||= 'baz';
exports.foo = foo;
exports.nullCoalesc = nullCoalesc;
exports.optionalChain = optionalChain;
",
]
`;

exports[`New syntax babel transforms example test case: node-experimental-mjs 1`] = `
Array [
  "mjs/index-node-experimental-mjs.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: mjs
const foo = {};
const optionalChain = foo?.bar;
const nullCoalesc = foo ?? 0;
foo.bar ??= 'bar';
foo.baz ||= 'baz';
export { foo, nullCoalesc, optionalChain };
",
]
`;

exports[`New syntax babel transforms example test case: node-legacy-cjs 1`] = `
Array [
  "cjs/index-node-legacy-cjs.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: cjs
'use strict';

var _foo$bar;

Object.defineProperty(exports, '__esModule', {
  value: true
});
const foo = {};
const optionalChain = foo === null || foo === void 0 ? void 0 : foo.bar;
const nullCoalesc = foo !== null && foo !== void 0 ? foo : 0;
(_foo$bar = foo.bar) !== null && _foo$bar !== void 0 ? _foo$bar : foo.bar = 'bar';
foo.baz || (foo.baz = 'baz');
exports.foo = foo;
exports.nullCoalesc = nullCoalesc;
exports.optionalChain = optionalChain;
",
]
`;

exports[`New syntax babel transforms example test case: node-legacy-lib 1`] = `
Array [
  "lib/index-node-legacy-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: lib
'use strict';

var _foo$bar;

Object.defineProperty(exports, '__esModule', {
  value: true
});
const foo = {};
const optionalChain = foo === null || foo === void 0 ? void 0 : foo.bar;
const nullCoalesc = foo !== null && foo !== void 0 ? foo : 0;
(_foo$bar = foo.bar) !== null && _foo$bar !== void 0 ? _foo$bar : foo.bar = 'bar';
foo.baz || (foo.baz = 'baz');
exports.foo = foo;
exports.nullCoalesc = nullCoalesc;
exports.optionalChain = optionalChain;
",
]
`;

exports[`New syntax babel transforms example test case: node-legacy-mjs 1`] = `
Array [
  "mjs/index-node-legacy-mjs.mjs",
  "var _foo$bar;

// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: mjs
const foo = {};
const optionalChain = foo === null || foo === void 0 ? void 0 : foo.bar;
const nullCoalesc = foo !== null && foo !== void 0 ? foo : 0;
(_foo$bar = foo.bar) !== null && _foo$bar !== void 0 ? _foo$bar : foo.bar = 'bar';
foo.baz || (foo.baz = 'baz');
export { foo, nullCoalesc, optionalChain };
",
]
`;

exports[`New syntax babel transforms example test case: node-stable-cjs 1`] = `
Array [
  "cjs/index-node-stable-cjs.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: cjs
'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});
const foo = {};
const optionalChain = foo?.bar;
const nullCoalesc = foo ?? 0;
foo.bar ?? (foo.bar = 'bar');
foo.baz || (foo.baz = 'baz');
exports.foo = foo;
exports.nullCoalesc = nullCoalesc;
exports.optionalChain = optionalChain;
",
]
`;

exports[`New syntax babel transforms example test case: node-stable-lib 1`] = `
Array [
  "lib/index-node-stable-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: lib
'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});
const foo = {};
const optionalChain = foo?.bar;
const nullCoalesc = foo ?? 0;
foo.bar ?? (foo.bar = 'bar');
foo.baz || (foo.baz = 'baz');
exports.foo = foo;
exports.nullCoalesc = nullCoalesc;
exports.optionalChain = optionalChain;
",
]
`;

exports[`New syntax babel transforms example test case: node-stable-mjs 1`] = `
Array [
  "mjs/index-node-stable-mjs.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: mjs
const foo = {};
const optionalChain = foo?.bar;
const nullCoalesc = foo ?? 0;
foo.bar ?? (foo.bar = 'bar');
foo.baz || (foo.baz = 'baz');
export { foo, nullCoalesc, optionalChain };
",
]
`;

exports[`New syntax swc transforms example test case: browser-current-esm 1`] = `
Array [
  "esm/index-browser-current-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: current, Format: esm
const foo = {};
const optionalChain = foo?.bar;
const nullCoalesc = foo ?? 0;
foo.bar ??= 'bar';
foo.baz ||= 'baz';
export { foo, nullCoalesc, optionalChain };
",
]
`;

exports[`New syntax swc transforms example test case: browser-current-lib 1`] = `
Array [
  "lib/index-browser-current-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: current, Format: lib
'use strict';
Object.defineProperty(exports, '__esModule', {
    value: true
});
const foo = {};
const optionalChain = foo?.bar;
const nullCoalesc = foo ?? 0;
foo.bar ??= 'bar';
foo.baz ||= 'baz';
exports.foo = foo;
exports.nullCoalesc = nullCoalesc;
exports.optionalChain = optionalChain;
",
]
`;

exports[`New syntax swc transforms example test case: browser-current-umd 1`] = `
Array [
  "umd/index-browser-current-umd.js",
  "(function(global, factory) {
    if (typeof define === \\"function\\" && define.amd) {
        define([
            \\"exports\\"
        ], factory);
    } else if (typeof exports !== \\"undefined\\") {
        factory(exports);
    } else {
        var mod = {
            exports: {}
        };
        factory(mod.exports);
        global.examples = mod.exports;
    }
})(this, function(_exports) {
    \\"use strict\\";
    Object.defineProperty(_exports, \\"__esModule\\", {
        value: true
    });
    _exports.nullCoalesc = _exports.optionalChain = _exports.foo = void 0;
    const foo = {};
    _exports.foo = foo;
    const optionalChain = foo?.bar;
    _exports.optionalChain = optionalChain;
    const nullCoalesc = foo ?? 0;
    _exports.nullCoalesc = nullCoalesc;
    foo.bar ??= 'bar';
    foo.baz ||= 'baz';
});
",
]
`;

exports[`New syntax swc transforms example test case: browser-experimental-esm 1`] = `
Array [
  "esm/index-browser-experimental-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: experimental, Format: esm
const foo = {};
const optionalChain = foo?.bar;
const nullCoalesc = foo ?? 0;
foo.bar ??= 'bar';
foo.baz ||= 'baz';
export { foo, nullCoalesc, optionalChain };
",
]
`;

exports[`New syntax swc transforms example test case: browser-experimental-lib 1`] = `
Array [
  "lib/index-browser-experimental-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: experimental, Format: lib
'use strict';
Object.defineProperty(exports, '__esModule', {
    value: true
});
const foo = {};
const optionalChain = foo?.bar;
const nullCoalesc = foo ?? 0;
foo.bar ??= 'bar';
foo.baz ||= 'baz';
exports.foo = foo;
exports.nullCoalesc = nullCoalesc;
exports.optionalChain = optionalChain;
",
]
`;

exports[`New syntax swc transforms example test case: browser-experimental-umd 1`] = `
Array [
  "umd/index-browser-experimental-umd.js",
  "(function(global, factory) {
    if (typeof define === \\"function\\" && define.amd) {
        define([
            \\"exports\\"
        ], factory);
    } else if (typeof exports !== \\"undefined\\") {
        factory(exports);
    } else {
        var mod = {
            exports: {}
        };
        factory(mod.exports);
        global.examples = mod.exports;
    }
})(this, function(_exports) {
    \\"use strict\\";
    Object.defineProperty(_exports, \\"__esModule\\", {
        value: true
    });
    _exports.nullCoalesc = _exports.optionalChain = _exports.foo = void 0;
    const foo = {};
    _exports.foo = foo;
    const optionalChain = foo?.bar;
    _exports.optionalChain = optionalChain;
    const nullCoalesc = foo ?? 0;
    _exports.nullCoalesc = nullCoalesc;
    foo.bar ??= 'bar';
    foo.baz ||= 'baz';
});
",
]
`;

exports[`New syntax swc transforms example test case: browser-legacy-esm 1`] = `
Array [
  "esm/index-browser-legacy-esm.js",
  "var _foo, _foo1;
// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: legacy, Format: esm
var foo = {};
var optionalChain = foo === null || foo === void 0 ? void 0 : foo.bar;
var nullCoalesc = foo !== null && foo !== void 0 ? foo : 0;
var _bar;
(_bar = (_foo = foo).bar) !== null && _bar !== void 0 ? _bar : _foo.bar = \\"bar\\";
(_foo1 = foo).baz || (_foo1.baz = \\"baz\\");
export { foo, nullCoalesc, optionalChain };
",
]
`;

exports[`New syntax swc transforms example test case: browser-legacy-lib 1`] = `
Array [
  "lib/index-browser-legacy-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: legacy, Format: lib
\\"use strict\\";
var _foo, _foo1;
Object.defineProperty(exports, \\"__esModule\\", {
    value: true
});
var foo = {};
var optionalChain = foo === null || foo === void 0 ? void 0 : foo.bar;
var nullCoalesc = foo !== null && foo !== void 0 ? foo : 0;
var _bar;
(_bar = (_foo = foo).bar) !== null && _bar !== void 0 ? _bar : _foo.bar = \\"bar\\";
(_foo1 = foo).baz || (_foo1.baz = \\"baz\\");
exports.foo = foo;
exports.nullCoalesc = nullCoalesc;
exports.optionalChain = optionalChain;
",
]
`;

exports[`New syntax swc transforms example test case: browser-legacy-umd 1`] = `
Array [
  "umd/index-browser-legacy-umd.js",
  "(function(global, factory) {
    if (typeof define === \\"function\\" && define.amd) {
        define([
            \\"exports\\"
        ], factory);
    } else if (typeof exports !== \\"undefined\\") {
        factory(exports);
    } else {
        var mod = {
            exports: {}
        };
        factory(mod.exports);
        global.examples = mod.exports;
    }
})(this, function(_exports) {
    \\"use strict\\";
    Object.defineProperty(_exports, \\"__esModule\\", {
        value: true
    });
    _exports.nullCoalesc = _exports.optionalChain = _exports.foo = void 0;
    var _foo, _foo1;
    var foo = {};
    _exports.foo = foo;
    var optionalChain = foo === null || foo === void 0 ? void 0 : foo.bar;
    _exports.optionalChain = optionalChain;
    var nullCoalesc = foo !== null && foo !== void 0 ? foo : 0;
    _exports.nullCoalesc = nullCoalesc;
    var _bar;
    (_bar = (_foo = foo).bar) !== null && _bar !== void 0 ? _bar : _foo.bar = \\"bar\\";
    (_foo1 = foo).baz || (_foo1.baz = \\"baz\\");
});
",
]
`;

exports[`New syntax swc transforms example test case: browser-stable-esm 1`] = `
Array [
  "esm/index-browser-stable-esm.js",
  "var _foo, _foo1;
// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: stable, Format: esm
const foo = {};
const optionalChain = foo === null || foo === void 0 ? void 0 : foo.bar;
const nullCoalesc = foo !== null && foo !== void 0 ? foo : 0;
var _bar;
(_bar = (_foo = foo).bar) !== null && _bar !== void 0 ? _bar : _foo.bar = 'bar';
(_foo1 = foo).baz || (_foo1.baz = 'baz');
export { foo, nullCoalesc, optionalChain };
",
]
`;

exports[`New syntax swc transforms example test case: browser-stable-lib 1`] = `
Array [
  "lib/index-browser-stable-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: stable, Format: lib
'use strict';
var _foo, _foo1;
Object.defineProperty(exports, '__esModule', {
    value: true
});
const foo = {};
const optionalChain = foo === null || foo === void 0 ? void 0 : foo.bar;
const nullCoalesc = foo !== null && foo !== void 0 ? foo : 0;
var _bar;
(_bar = (_foo = foo).bar) !== null && _bar !== void 0 ? _bar : _foo.bar = 'bar';
(_foo1 = foo).baz || (_foo1.baz = 'baz');
exports.foo = foo;
exports.nullCoalesc = nullCoalesc;
exports.optionalChain = optionalChain;
",
]
`;

exports[`New syntax swc transforms example test case: browser-stable-umd 1`] = `
Array [
  "umd/index-browser-stable-umd.js",
  "(function(global, factory) {
    if (typeof define === \\"function\\" && define.amd) {
        define([
            \\"exports\\"
        ], factory);
    } else if (typeof exports !== \\"undefined\\") {
        factory(exports);
    } else {
        var mod = {
            exports: {}
        };
        factory(mod.exports);
        global.examples = mod.exports;
    }
})(this, function(_exports) {
    \\"use strict\\";
    Object.defineProperty(_exports, \\"__esModule\\", {
        value: true
    });
    _exports.nullCoalesc = _exports.optionalChain = _exports.foo = void 0;
    var _foo, _foo1;
    const foo = {};
    _exports.foo = foo;
    const optionalChain = foo === null || foo === void 0 ? void 0 : foo.bar;
    _exports.optionalChain = optionalChain;
    const nullCoalesc = foo !== null && foo !== void 0 ? foo : 0;
    _exports.nullCoalesc = nullCoalesc;
    var _bar;
    (_bar = (_foo = foo).bar) !== null && _bar !== void 0 ? _bar : _foo.bar = 'bar';
    (_foo1 = foo).baz || (_foo1.baz = 'baz');
});
",
]
`;

exports[`New syntax swc transforms example test case: native-current-lib 1`] = `
Array [
  "lib/index-native-current-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: current, Format: lib
'use strict';
Object.defineProperty(exports, '__esModule', {
    value: true
});
const foo = {};
const optionalChain = foo?.bar;
const nullCoalesc = foo ?? 0;
foo.bar ??= 'bar';
foo.baz ||= 'baz';
exports.foo = foo;
exports.nullCoalesc = nullCoalesc;
exports.optionalChain = optionalChain;
",
]
`;

exports[`New syntax swc transforms example test case: native-experimental-lib 1`] = `
Array [
  "lib/index-native-experimental-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: experimental, Format: lib
'use strict';
Object.defineProperty(exports, '__esModule', {
    value: true
});
const foo = {};
const optionalChain = foo?.bar;
const nullCoalesc = foo ?? 0;
foo.bar ??= 'bar';
foo.baz ||= 'baz';
exports.foo = foo;
exports.nullCoalesc = nullCoalesc;
exports.optionalChain = optionalChain;
",
]
`;

exports[`New syntax swc transforms example test case: native-legacy-lib 1`] = `
Array [
  "lib/index-native-legacy-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: legacy, Format: lib
\\"use strict\\";
var _foo, _foo1;
Object.defineProperty(exports, \\"__esModule\\", {
    value: true
});
const foo = {};
const optionalChain = foo === null || foo === void 0 ? void 0 : foo.bar;
const nullCoalesc = foo !== null && foo !== void 0 ? foo : 0;
var _bar;
(_bar = (_foo = foo).bar) !== null && _bar !== void 0 ? _bar : _foo.bar = \\"bar\\";
(_foo1 = foo).baz || (_foo1.baz = \\"baz\\");
exports.foo = foo;
exports.nullCoalesc = nullCoalesc;
exports.optionalChain = optionalChain;
",
]
`;

exports[`New syntax swc transforms example test case: native-stable-lib 1`] = `
Array [
  "lib/index-native-stable-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: stable, Format: lib
'use strict';
var _foo, _foo1;
Object.defineProperty(exports, '__esModule', {
    value: true
});
const foo = {};
const optionalChain = foo === null || foo === void 0 ? void 0 : foo.bar;
const nullCoalesc = foo !== null && foo !== void 0 ? foo : 0;
var _bar;
(_bar = (_foo = foo).bar) !== null && _bar !== void 0 ? _bar : _foo.bar = 'bar';
(_foo1 = foo).baz || (_foo1.baz = 'baz');
exports.foo = foo;
exports.nullCoalesc = nullCoalesc;
exports.optionalChain = optionalChain;
",
]
`;

exports[`New syntax swc transforms example test case: node-current-cjs 1`] = `
Array [
  "cjs/index-node-current-cjs.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: cjs
'use strict';
Object.defineProperty(exports, '__esModule', {
    value: true
});
const foo = {};
const optionalChain = foo?.bar;
const nullCoalesc = foo ?? 0;
foo.bar ??= 'bar';
foo.baz ||= 'baz';
exports.foo = foo;
exports.nullCoalesc = nullCoalesc;
exports.optionalChain = optionalChain;
",
]
`;

exports[`New syntax swc transforms example test case: node-current-lib 1`] = `
Array [
  "lib/index-node-current-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: lib
'use strict';
Object.defineProperty(exports, '__esModule', {
    value: true
});
const foo = {};
const optionalChain = foo?.bar;
const nullCoalesc = foo ?? 0;
foo.bar ??= 'bar';
foo.baz ||= 'baz';
exports.foo = foo;
exports.nullCoalesc = nullCoalesc;
exports.optionalChain = optionalChain;
",
]
`;

exports[`New syntax swc transforms example test case: node-current-mjs 1`] = `
Array [
  "mjs/index-node-current-mjs.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: mjs
const foo = {};
const optionalChain = foo?.bar;
const nullCoalesc = foo ?? 0;
foo.bar ??= 'bar';
foo.baz ||= 'baz';
export { foo, nullCoalesc, optionalChain };
",
]
`;

exports[`New syntax swc transforms example test case: node-experimental-cjs 1`] = `
Array [
  "cjs/index-node-experimental-cjs.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: cjs
'use strict';
Object.defineProperty(exports, '__esModule', {
    value: true
});
const foo = {};
const optionalChain = foo?.bar;
const nullCoalesc = foo ?? 0;
foo.bar ??= 'bar';
foo.baz ||= 'baz';
exports.foo = foo;
exports.nullCoalesc = nullCoalesc;
exports.optionalChain = optionalChain;
",
]
`;

exports[`New syntax swc transforms example test case: node-experimental-lib 1`] = `
Array [
  "lib/index-node-experimental-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: lib
'use strict';
Object.defineProperty(exports, '__esModule', {
    value: true
});
const foo = {};
const optionalChain = foo?.bar;
const nullCoalesc = foo ?? 0;
foo.bar ??= 'bar';
foo.baz ||= 'baz';
exports.foo = foo;
exports.nullCoalesc = nullCoalesc;
exports.optionalChain = optionalChain;
",
]
`;

exports[`New syntax swc transforms example test case: node-experimental-mjs 1`] = `
Array [
  "mjs/index-node-experimental-mjs.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: mjs
const foo = {};
const optionalChain = foo?.bar;
const nullCoalesc = foo ?? 0;
foo.bar ??= 'bar';
foo.baz ||= 'baz';
export { foo, nullCoalesc, optionalChain };
",
]
`;

exports[`New syntax swc transforms example test case: node-legacy-cjs 1`] = `
Array [
  "cjs/index-node-legacy-cjs.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: cjs
\\"use strict\\";
var _foo, _foo1;
Object.defineProperty(exports, \\"__esModule\\", {
    value: true
});
const foo = {};
const optionalChain = foo === null || foo === void 0 ? void 0 : foo.bar;
const nullCoalesc = foo !== null && foo !== void 0 ? foo : 0;
var _bar;
(_bar = (_foo = foo).bar) !== null && _bar !== void 0 ? _bar : _foo.bar = \\"bar\\";
(_foo1 = foo).baz || (_foo1.baz = \\"baz\\");
exports.foo = foo;
exports.nullCoalesc = nullCoalesc;
exports.optionalChain = optionalChain;
",
]
`;

exports[`New syntax swc transforms example test case: node-legacy-lib 1`] = `
Array [
  "lib/index-node-legacy-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: lib
\\"use strict\\";
var _foo, _foo1;
Object.defineProperty(exports, \\"__esModule\\", {
    value: true
});
const foo = {};
const optionalChain = foo === null || foo === void 0 ? void 0 : foo.bar;
const nullCoalesc = foo !== null && foo !== void 0 ? foo : 0;
var _bar;
(_bar = (_foo = foo).bar) !== null && _bar !== void 0 ? _bar : _foo.bar = \\"bar\\";
(_foo1 = foo).baz || (_foo1.baz = \\"baz\\");
exports.foo = foo;
exports.nullCoalesc = nullCoalesc;
exports.optionalChain = optionalChain;
",
]
`;

exports[`New syntax swc transforms example test case: node-legacy-mjs 1`] = `
Array [
  "mjs/index-node-legacy-mjs.mjs",
  "var _foo, _foo1;
// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: mjs
const foo = {};
const optionalChain = foo === null || foo === void 0 ? void 0 : foo.bar;
const nullCoalesc = foo !== null && foo !== void 0 ? foo : 0;
var _bar;
(_bar = (_foo = foo).bar) !== null && _bar !== void 0 ? _bar : _foo.bar = \\"bar\\";
(_foo1 = foo).baz || (_foo1.baz = \\"baz\\");
export { foo, nullCoalesc, optionalChain };
",
]
`;

exports[`New syntax swc transforms example test case: node-stable-cjs 1`] = `
Array [
  "cjs/index-node-stable-cjs.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: cjs
'use strict';
var _foo, _foo1;
Object.defineProperty(exports, '__esModule', {
    value: true
});
const foo = {};
const optionalChain = foo?.bar;
const nullCoalesc = foo ?? 0;
(_foo = foo).bar ?? (_foo.bar = 'bar');
(_foo1 = foo).baz || (_foo1.baz = 'baz');
exports.foo = foo;
exports.nullCoalesc = nullCoalesc;
exports.optionalChain = optionalChain;
",
]
`;

exports[`New syntax swc transforms example test case: node-stable-lib 1`] = `
Array [
  "lib/index-node-stable-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: lib
'use strict';
var _foo, _foo1;
Object.defineProperty(exports, '__esModule', {
    value: true
});
const foo = {};
const optionalChain = foo?.bar;
const nullCoalesc = foo ?? 0;
(_foo = foo).bar ?? (_foo.bar = 'bar');
(_foo1 = foo).baz || (_foo1.baz = 'baz');
exports.foo = foo;
exports.nullCoalesc = nullCoalesc;
exports.optionalChain = optionalChain;
",
]
`;

exports[`New syntax swc transforms example test case: node-stable-mjs 1`] = `
Array [
  "mjs/index-node-stable-mjs.mjs",
  "var _foo, _foo1;
// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: mjs
const foo = {};
const optionalChain = foo?.bar;
const nullCoalesc = foo ?? 0;
(_foo = foo).bar ?? (_foo.bar = 'bar');
(_foo1 = foo).baz || (_foo1.baz = 'baz');
export { foo, nullCoalesc, optionalChain };
",
]
`;
